feat: navbar and header of ecom website

--- a/index.html
+++ b/index.html
@@ -16,6 +16,102 @@
     <title>Webit Store | Home</title>
 </head>
 <body>
-    
+    <!-- Navigation Bar -->
+    <nav class="docs-navbar" id="store-navbar">
+        <div class="title">
+            <a class="brand-name" href="#">Webitly</a>
+        </div>
+        <div>
+            <label for="search"></label>
+            <input type="search" name="search" id="search" placeholder="Search for brands, products and more">
+            <a href="#"></i></a>
+        </div>
+
+        <ul id="nav-options">
+            <li>
+                <a href="#" id="nav-icon-text">
+                    <i class="far fa-user-circle"></i>
+                </a>
+            </li>
+            <li>
+                <div id="nav-badge-div">
+                    <a href="#">
+                        <i class="far fa-heart" id="nav-icon-text"></i>
+                        <span id="nav-badge">5</span>
+                    </a>
+                </div>
+            </li>
+            <li>
+                <div id="nav-badge-div">
+                    <a href="#">
+                        <i class="far fa-shopping-cart" id="nav-icon-text"></i>
+                        <span id="nav-badge">2</span>
+                    </a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+
+    <header class="header">
+        <!-- Men -->
+        <div class="header-items">
+            <div class="header-img">
+                <a href="#">
+                    <img src="./assets/men_fashion_banner.jpg" width="250px" alt="Men">
+                </a>
+            </div>
+            <a href="#">
+                <span class="header-overlay">Men</span>
+            </a>
+        </div>
+        <!-- Women -->
+        <div class="header-items">
+            <div class="header-img">
+                <a href="#">
+                    <img src="assets/women_fashion_banner.jpg" width="250px" alt="Women">
+                </a>
+            </div>
+            <a href="#">
+                <span class="header-overlay">Women</span>
+            </a>
+        </div>
+        <!-- Kids -->
+        <div class="header-items">
+            <div class="header-img">
+                <a href="#">
+                    <img src="./assets/kids_fashion_banner.jpg" width="250px" alt="Kids">
+                </a>
+            </div>
+            <a href="#">
+                <span class="header-overlay">Kids</span>
+            </a>
+        </div>
+        <!-- Home & Living -->
+        <div class="header-items">
+            <div class="header-img">
+                <a href="#">
+                    <img src="./assets/home_&_living.jpg" width="250px" alt="Home&Living">
+                </a>
+            </div>
+            <a href="#">
+                <span class="header-overlay">Home&Living</span>
+            </a>
+        </div>
+        <!-- Accessories -->
+        <div class="header-items">
+            <div class="header-img">
+                <a href="#">
+                    <img src="./assets/accessories.jpg" width="250px" alt="Accessories">
+                </a>
+            </div>
+            <a href="#">
+                <span class="header-overlay">Accessories</span>
+            </a>
+        </div>
+    </header>
+
+    <section class="banner">
+
+    </section>
 </body>
 </html>
