feat: Home Page added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="title">
             <a class="brand-name" href="#">Webitly</a>
         </div>
-        <div>
+        <div class="search">
             <label for="search"></label>
             <input type="search" name="search" id="search" placeholder="Search for brands, products and more">
             <a href="#"></i></a>
@@ -51,13 +51,13 @@
             </li>
         </ul>
     </nav>
-
+    <!-- Header -->
     <header class="header">
         <!-- Men -->
         <div class="header-items">
             <div class="header-img">
                 <a href="#">
-                    <img src="./assets/men_fashion_banner.jpg" width="250px" alt="Men">
+                    <img src="./assets/images/men_fashion_banner.jpg" alt="Men">
                 </a>
             </div>
             <a href="#">
@@ -68,7 +68,7 @@
         <div class="header-items">
             <div class="header-img">
                 <a href="#">
-                    <img src="assets/women_fashion_banner.jpg" width="250px" alt="Women">
+                    <img src="assets/images/women_fashion_banner.jpg" alt="Women">
                 </a>
             </div>
             <a href="#">
@@ -79,7 +79,7 @@
         <div class="header-items">
             <div class="header-img">
                 <a href="#">
-                    <img src="./assets/kids_fashion_banner.jpg" width="250px" alt="Kids">
+                    <img src="./assets/images/kids_fashion_banner.jpg" alt="Kids">
                 </a>
             </div>
             <a href="#">
@@ -90,7 +90,7 @@
         <div class="header-items">
             <div class="header-img">
                 <a href="#">
-                    <img src="./assets/home_&_living.jpg" width="250px" alt="Home&Living">
+                    <img src="./assets/images/home_&_living.jpg" alt="Home&Living">
                 </a>
             </div>
             <a href="#">
@@ -101,7 +101,7 @@
         <div class="header-items">
             <div class="header-img">
                 <a href="#">
-                    <img src="./assets/accessories.jpg" width="250px" alt="Accessories">
+                    <img src="./assets/images/accessories.jpg" alt="Accessories">
                 </a>
             </div>
             <a href="#">
@@ -109,9 +109,56 @@
             </a>
         </div>
     </header>
-
-    <section class="banner">
-
+    <!-- Banner -->
+    <div class="banner">
+        <div>
+           <img src="./assets/images/banner.png" alt="Main Banner">
+        </div>
+        <a class="banner-badge" href="#">
+            <span class="banner-cta">SHOP NOW</span>
+        </a>
+    </div>
+    <!-- New Arrivals -->
+    <section class="new-arrival">
+        <div class="new-arrival-img">
+            <a href="#">
+                <img src="./assets/images/spring_collection.png" alt="spring-collection">
+            </a>
+        </div>
+        <div class="new-arrival-img">
+            <a href="#">
+                <img src="./assets/images/summer_collection.png" alt="summer-collection">
+            </a>
+        </div>
+        <div class="new-arrival-img">
+            <a href="#">
+                <img src="./assets/images/coming_soon.png" alt="coming-soon">
+            </a>
+        </div>
     </section>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-heading">
+            Made by GURSIMAR SINGH 🚀
+        </div>
+        <div>
+            <ul class="social-links">
+                <li>
+                  <a class="fab fa-linkedin" href="https://in.linkedin.com/in/gursimar-singh-cu" target="_blank"
+                    rel="noopener noreferrer"></a>
+                </li>
+        
+                <li>
+                  <a class="fab fa-twitter" href="https://twitter.com/Gursimar_DEV" target="_blank"
+                    rel="noopener noreferrer"></a>
+                </li>
+        
+                <li>
+                  <a class="fab fa-instagram" href="https://www.instagram.com/gursimar.dev/" target="_blank"
+                    rel="noopener noreferrer"></a>
+                </li>
+              </ul>
+        </div>
+    </footer>
 </body>
 </html>
