--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <meta name="description" content="Webit store is a go to place E-commerce platform for every bit of your needs." />
 
     <!-- External Link -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/homepage.css">
 
     <!-- Component Library -->
     <link rel="stylesheet" href="https://webit-ui.netlify.app/styles/components.css">
     
-    <title>Webit Store | Home</title>
+    <title>Webitly | Home</title>
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="docs-navbar" id="store-navbar">
         <div class="title">
-            <a class="brand-name" href="#">Webitly</a>
+            <a class="brand-name" href="./index.html">Webitly</a>
         </div>
         <div class="search">
             <label for="search"></label>
@@ -29,7 +29,7 @@
 
         <ul id="nav-options">
             <li>
-                <a href="#" id="nav-icon-text">
+                <a href="./pages/login.html" id="nav-icon-text">
                     <i class="far fa-user-circle"></i>
                 </a>
             </li>
