--- a/pages/signup.html
+++ b/pages/signup.html
@@ -35,7 +35,7 @@
             </li>
             <li>
                 <div id="nav-badge-div">
-                    <a href="#">
+                    <a href="./wishlist.html">
                         <i class="far fa-heart" id="nav-icon-text"></i>
                         <span id="nav-badge">5</span>
                     </a>
