--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -9,12 +9,12 @@
     <meta name="description" content="Webit store is a go to place E-commerce platform for every bit of your needs." />
 
     <link rel="stylesheet" href="../styles/homepage.css">
-    <link rel="stylesheet" href="../styles/login-signup.css">
+    <link rel="stylesheet" href="../styles/wishlist.css">
 
     <!-- Component Library -->
     <link rel="stylesheet" href="https://webit-ui.netlify.app/styles/components.css">
 
-    <title>Webitly | Login</title>
+    <title>Webitly | Wishlist</title>
 </head>
 
 <body>
@@ -53,42 +53,6 @@
             </li>
         </ul>
     </nav>
-
-    <!-- Login Page -->
-    <div class="wrapper">
-        <form action="./login.html" class="form">
-            <!-- Title -->
-            <h3 class="form-title">Login</h3>
-            <!-- Username -->
-            <div class="field-column">
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username" placeholder="Enter Username" required>
-            </div>
-            <!-- Password -->
-            <div class="field-column">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" placeholder="Enter Password" required>
-            </div>
-            <!-- Remember Me & Forgot password -->
-            <div class="field-row">
-                <label for="remember-me" class="remember-me">
-                    <input class="remember-me" type="checkbox" name="remember-me" id="remember-me">
-                    Remember Me
-                </label>
-                <a class="forget-pass link-btn-hover" href="#">Forget Password?</a>
-            </div>
-            <!-- Login Btn -->
-            <div class="field-column">
-                <button id="login-btn" class="link-btn-hover">Login</button>
-            </div>
-            <!-- Create New Account -->
-            <div class="field-row new-account">
-                <a class="create-acc-btn link-btn-hover" href="./signup.html">
-                    <i class="far fa-arrow-alt-circle-right"></i>Create Account
-                </a>
-            </div>
-        </form>
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
