--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </li>
             <li>
                 <div id="nav-badge-div">
-                    <a href="#">
+                    <a href="./pages/wishlist.html">
                         <i class="far fa-heart" id="nav-icon-text"></i>
                         <span id="nav-badge">5</span>
                     </a>
