--- a/pages/login.html
+++ b/pages/login.html
@@ -8,8 +8,10 @@
     <meta name="author" content="Gursimar Singh" />
     <meta name="description" content="Webit store is a go to place E-commerce platform for every bit of your needs." />
 
+    <!-- External link -->
     <link rel="stylesheet" href="../styles/homepage.css">
     <link rel="stylesheet" href="../styles/login-signup.css">
+    <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon">
 
     <!-- Component Library -->
     <link rel="stylesheet" href="https://webit-ui.netlify.app/styles/components.css">
@@ -21,7 +23,9 @@
     <!-- Navigation Bar -->
     <nav class="docs-navbar" id="store-navbar">
         <div class="title">
-            <a class="brand-name" href="../index.html">Webitly</a>
+            <a class="brand-name" href="../index.html">
+                <img src="../assets/images/logo.png" alt="Webitly">
+            </a>
         </div>
         <div class="search">
             <label for="search"></label>
@@ -31,9 +35,12 @@
 
         <ul id="nav-options">
             <li>
-                <a href="./login.html" id="nav-icon-text">
-                    <i class="far fa-user-circle"></i>
-                </a>
+                <div id="nav-badge-div">
+                    <a href="./login.html" id="nav-icon-text">
+                        <i class="far fa-user-circle"></i>
+                    </a>
+                </div>
+                <span>Account</span>
             </li>
             <li>
                 <div id="nav-badge-div">
@@ -42,6 +49,7 @@
                         <span id="nav-badge">5</span>
                     </a>
                 </div>
+                <span>Wishlist</span>
             </li>
             <li>
                 <div id="nav-badge-div">
@@ -50,6 +58,7 @@
                         <span id="nav-badge">2</span>
                     </a>
                 </div>
+                <span>Cart</span>
             </li>
         </ul>
     </nav>
