feat: added wishlist page

--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -62,7 +62,113 @@
             </li>
         </ul>
     </nav>
-
+    <!-- Main content -->
+    <div class="wishlist-wrapper">
+        <div class="card-example card-props">
+            <div class="card-img">
+              <img class="card-image" src="../assets/images/sweatshirt.png" alt="sweatshirt">
+            </div>
+            <h4>H&M</h4>
+            <p>Men Grey Relaxed Fit Sweatshirt</p>
+            <div class="card-price">
+                <span class="price">₹749</span>
+                <span class="strike">₹1499</span>
+            </div>
+            <span class="close"><i class="fal fa-heart" id="heart"></i></span>
+            <a class="card-btn" id="add-to-cart" href="">Add to Cart</a>
+        </div>
+        <div class="card-example card-props">
+            <div class="card-img">
+              <img class="card-image" src="../assets/images/sweatshirt.png" alt="sweatshirt">
+            </div>
+            <h4>H&M</h4>
+            <p>Men Grey Relaxed Fit Sweatshirt</p>
+            <div class="card-price">
+                <span class="price">₹749</span>
+                <span class="strike">₹1499</span>
+            </div>
+            <span class="close"><i class="fal fa-heart" id="heart"></i></span>
+            <a class="card-btn" id="add-to-cart" href="">Add to Cart</a>
+        </div>
+        <div class="card-example card-props">
+            <div class="card-img">
+              <img class="card-image" src="../assets/images/sweatshirt.png" alt="sweatshirt">
+            </div>
+            <h4>H&M</h4>
+            <p>Men Grey Relaxed Fit Sweatshirt</p>
+            <div class="card-price">
+                <span class="price">₹749</span>
+                <span class="strike">₹1499</span>
+            </div>
+            <span class="close"><i class="fal fa-heart" id="heart"></i></span>
+            <a class="card-btn" id="add-to-cart" href="">Add to Cart</a>
+        </div>
+        <div class="card-example card-props">
+            <div class="card-img">
+              <img class="card-image" src="../assets/images/sweatshirt.png" alt="sweatshirt">
+            </div>
+            <h4>H&M</h4>
+            <p>Men Grey Relaxed Fit Sweatshirt</p>
+            <div class="card-price">
+                <span class="price">₹749</span>
+                <span class="strike">₹1499</span>
+            </div>
+            <span class="close"><i class="fal fa-heart" id="heart"></i></span>
+            <a class="card-btn" id="add-to-cart" href="">Add to Cart</a>
+        </div>
+        <div class="card-example card-props">
+            <div class="card-img">
+              <img class="card-image" src="../assets/images/sweatshirt.png" alt="sweatshirt">
+            </div>
+            <h4>H&M</h4>
+            <p>Men Grey Relaxed Fit Sweatshirt</p>
+            <div class="card-price">
+                <span class="price">₹749</span>
+                <span class="strike">₹1499</span>
+            </div>
+            <span class="close"><i class="fal fa-heart" id="heart"></i></span>
+            <a class="card-btn" id="add-to-cart" href="">Add to Cart</a>
+        </div>
+        <div class="card-example card-props">
+            <div class="card-img">
+              <img class="card-image" src="../assets/images/sweatshirt.png" alt="sweatshirt">
+            </div>
+            <h4>H&M</h4>
+            <p>Men Grey Relaxed Fit Sweatshirt</p>
+            <div class="card-price">
+                <span class="price">₹749</span>
+                <span class="strike">₹1499</span>
+            </div>
+            <span class="close"><i class="fal fa-heart" id="heart"></i></span>
+            <a class="card-btn" id="add-to-cart" href="">Add to Cart</a>
+        </div>
+        <div class="card-example card-props">
+            <div class="card-img">
+              <img class="card-image" src="../assets/images/sweatshirt.png" alt="sweatshirt">
+            </div>
+            <h4>H&M</h4>
+            <p>Men Grey Relaxed Fit Sweatshirt</p>
+            <div class="card-price">
+                <span class="price">₹749</span>
+                <span class="strike">₹1499</span>
+            </div>
+            <span class="close"><i class="fal fa-heart" id="heart"></i></span>
+            <a class="card-btn" id="add-to-cart" href="">Add to Cart</a>
+        </div>
+        <div class="card-example card-props">
+            <div class="card-img">
+              <img class="card-image" src="../assets/images/sweatshirt.png" alt="sweatshirt">
+            </div>
+            <h4>H&M</h4>
+            <p>Men Grey Relaxed Fit Sweatshirt</p>
+            <div class="card-price">
+                <span class="price">₹749</span>
+                <span class="strike">₹1499</span>
+            </div>
+            <span class="close"><i class="fal fa-heart" id="heart"></i></span>
+            <a class="card-btn" id="add-to-cart" href="">Add to Cart</a>
+        </div>
+    </div>
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-heading">
