feat: added product page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Men -->
         <div class="header-items">
             <div class="header-img">
-                <a href="#">
+                <a href="./pages/product.html">
                     <img src="./assets/images/men_fashion_banner.jpg" alt="Men">
                 </a>
             </div>
@@ -75,7 +75,7 @@
         <!-- Women -->
         <div class="header-items">
             <div class="header-img">
-                <a href="#">
+                <a href="./pages/product.html">
                     <img src="assets/images/women_fashion_banner.jpg" alt="Women">
                 </a>
             </div>
@@ -86,7 +86,7 @@
         <!-- Kids -->
         <div class="header-items">
             <div class="header-img">
-                <a href="#">
+                <a href="./pages/product.html">
                     <img src="./assets/images/kids_fashion_banner.jpg" alt="Kids">
                 </a>
             </div>
@@ -97,7 +97,7 @@
         <!-- Home & Living -->
         <div class="header-items">
             <div class="header-img">
-                <a href="#">
+                <a href="./pages/product.html">
                     <img src="./assets/images/home_&_living.jpg" alt="Home&Living">
                 </a>
             </div>
@@ -108,7 +108,7 @@
         <!-- Accessories -->
         <div class="header-items">
             <div class="header-img">
-                <a href="#">
+                <a href="./pages/product.html">
                     <img src="./assets/images/accessories.jpg" alt="Accessories">
                 </a>
             </div>
@@ -122,7 +122,7 @@
         <div>
            <img src="./assets/images/banner.png" alt="Main Banner">
         </div>
-        <a class="banner-badge" href="#">
+        <a class="banner-badge" href="./pages/product.html">
             <span class="banner-cta">SHOP NOW</span>
         </a>
     </div>
