issue: unable to fix extra space

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -64,7 +64,67 @@
     </nav>
     <!-- Main content -->
     <main class="cart-wrapper">
-        
+        <div class="cart-listing">
+            <div class="card-horizontal">
+                <div class="card-image">
+                    <img src="../assets/product-images/sweatshirt.png" alt="product-image">
+                </div>
+                <div class="product-info">
+                    <h3>
+                        H&M
+                    </h3>
+                    <p>
+                        Men Grey Relaxed Fit Sweatshirt
+                    </p>
+                    <div class="card-price">
+                        <span class="price">₹749</span>
+                    <span class="strike">₹1499</span>
+                    </div>
+                    <div class="quantity">
+                        <span>Quantity: </span>
+                        <button class="cart-button">-</button>
+                        <input type="text" name="quantity" id="quantity" value="1">
+                        <button class="cart-button">+</button>
+                    </div>
+                    <div class="cart-cta">
+                        <button class="remove">Remove from Cart</button>
+                        <button class="move-wish">Move to Wishlist</button>
+                    </div>
+                </div>
+            </div> 
+            <div class="card-horizontal">
+                <div class="card-image">
+                    <img src="../assets/product-images/sweatshirt.png" alt="product-image">
+                </div>
+                <div class="product-info">
+                    <h3>
+                        H&M
+                    </h3>
+                    <p>
+                        Men Grey Relaxed Fit Sweatshirt
+                    </p>
+                    <div class="card-price">
+                        <span class="price">₹749</span>
+                    <span class="strike">₹1499</span>
+                    </div>
+                    <div class="quantity">
+                        <span>Quantity: </span>
+                        <button class="cart-button">-</button>
+                        <input type="text" name="quantity" id="quantity" value="1">
+                        <button class="cart-button">+</button>
+                    </div>
+                    <div class="cart-cta">
+                        <button class="remove">Remove from Cart</button>
+                        <button class="move-wish">Move to Wishlist</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="total">
+            <div>
+                <h3>Total</h3>
+            </div>
+        </div>
     </main>
     <!-- Footer -->
     <footer class="footer">
