--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -53,7 +53,7 @@
             </li>
             <li>
                 <div id="nav-badge-div">
-                    <a href="#">
+                    <a href="./cart.html">
                         <i class="far fa-shopping-cart" id="nav-icon-text"></i>
                         <span id="nav-badge">2</span>
                     </a>
