feat: added cart page

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="product-info">
                     <h3>
-                        H&M
+                        Zara
                     </h3>
                     <p>
                         Men Grey Relaxed Fit Sweatshirt
@@ -120,9 +120,27 @@
                 </div>
             </div>
         </div>
-        <div class="total">
+        <div class="price-details">
             <div>
-                <h3>Total</h3>
+                <h3>Price Details</h3>
+                <div class="each-price">
+                    <span>Price(2)</span>
+                    <span>₹2998</span>
+                </div>
+                <div class="discount">
+                    <span>Discount</span>
+                    <span>-₹1500</span>
+                </div>
+                <div class="delivery-charge">
+                    <span>Delivery Charges</span>
+                    <span>₹200</span>
+                </div>
+                <div class="total-amount">
+                    <span>Total</span>
+                    <span>₹1698</span>
+                </div>
+                <p>You have saved <strong>₹1500 </strong>for this order</p>
+                <button class="place-order">Place Order</button>
             </div>
         </div>
     </main>
